<resources>
    <string name="app_name">Shapes</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="height_TR">Height</string>
    <string name="radius">Radius</string>
    <string name="equal_to">Equal To</string>
    <string name="base">Base</string>
    <string-array name="shapes">
        <item>Select Shape</item>
        <item>Rectangle</item>
        <item>Circle</item>
        <item>Triangle</item>
    </string-array>

</resources>