<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/shapee"
    >

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:entries="@array/shapes"
        android:layout_margin="10dp"
        android:textAlignment="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/et_h_Rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/height"
            android:textSize="24dp"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/et_w_Rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/width"
            android:textSize="24dp"
            android:padding="10dp"/>
    </LinearLayout>
    <EditText
        android:id="@+id/et_Rd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/radius"
        android:textSize="24dp"
        android:layout_margin="10dp"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/et_h_Tr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/height_TR"
            android:textSize="24dp"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/et_b_Tr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/base"
            android:textSize="24dp"
            android:padding="10dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="........"
        android:textSize="33dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_margin="10dp"
        android:padding="10dp"/>
    <Button
        android:id="@+id/bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/equal_to"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_marginTop="150dp"/>
</LinearLayout>
